fixed overflow issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,7 +25,7 @@ body {
   scroll-behavior: smooth;
 }
 
-.main {
+.overflow_hidden {
   overflow: hidden;
 }
 
